--- a/bundle.html
+++ b/bundle.html
@@ -104,10 +104,14 @@ d3.json("flare-imports.json", function(classes) {
   var nodes = cluster.nodes(packages.root(classes)),
       links = packages.imports(nodes),
       splines = bundle(links);
-
+      console.log(links);
+      console.log(splines);
+    //  console.log("nodes: +"nodes);
+    //  console.log("nodes: +"nodes)
+    //  console.log("nodes: +"nodes)
   var path = svg.selectAll("path.link")
       .data(links)
-    .enter().append("svg:path")
+      .enter().append("svg:path")
       .attr("class", function(d) { return "link source-" + d.source.key + " target-" + d.target.key; })
       .attr("d", function(d, i) { return line(splines[i]); });
 
