--- a/examples/combodemo.html
+++ b/examples/combodemo.html
@@ -7,12 +7,11 @@
     <script src="../d3/d3-tip.js"></script>
     <style>
     body {
-      overflow: hidden;
       margin: 0;
       font-size: 14px;
       font-family: "Helvetica Neue", Helvetica;
     }
- 
+
     #linearchart {
       position: absolute;
       top: 650px;
@@ -37,21 +36,21 @@
     <div id="body">
       <!-- The containers that will hold the SVG of the plots -->
       <div id="circularchart"></div>
-      <div id="linearchart"></div>      
+      <div id="linearchart"></div>
       <div id="brush"></div>
     </div>
-    
+
     <!-- Sample data to be rendered -->
     <script type="text/javascript" src="data.simple.js"></script>
 
     <!-- Circular plot library -->
-    <script type="text/javascript" src="../circularplot.js"></script>
+    <script type="text/javascript" src="../src/js/circularplot.js"></script>
 
     <!-- Linear plot library -->
-    <script type="text/javascript" src="../linearplot.js"></script>
+    <script type="text/javascript" src="../src/js/linearplot.js"></script>
 
     <!-- Linear brush library -->
-    <script type="text/javascript" src="../linearbrush.js"></script>
+    <script type="text/javascript" src="../src/js/linearbrush.js"></script>
 
     <!-- Initialization code to initialize the plots, this is what you would write
          and place in your application. Note, pulled from the linear and circular
