--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
       }
     </style>
     <link href="src/css/tracks.css" rel="stylesheet">
-    <script src="src/js/readinput.js"></script>
+    <!-- <script src="src/js/readinput.js"></script> -->
+    <!-- <script src="src/js/readJBrowse.js"></script> -->
     <script>
+    // var tracks = [];
+    // readJBrowse();
     // start of pseudo data
     //var tracks =[];
     // //
@@ -96,6 +99,8 @@
     // console.log(track1);
     // tracks.push(track1);
 
+    
+
     </script>
   </head>
   <body>
@@ -107,9 +112,9 @@
     </div>
 
     <!-- Libraries needed for save feature -->
-    <script type="text/javascript" src="http://bl.ocks.org/lairdm/raw/bdd7410698e06970a9ff/rgbcolor.js"></script>
+    <!-- <script type="text/javascript" src="http://bl.ocks.org/lairdm/raw/bdd7410698e06970a9ff/rgbcolor.js"></script>
     <script type="text/javascript" src="http://bl.ocks.org/lairdm/raw/bdd7410698e06970a9ff/canvg.js"></script>
-    <script type="text/javascript" src="http://bl.ocks.org/lairdm/raw/bdd7410698e06970a9ff/FileSaver.js"></script>
+    <script type="text/javascript" src="http://bl.ocks.org/lairdm/raw/bdd7410698e06970a9ff/FileSaver.js"></script> -->
 
     <!-- Circular plot library -->
     <script type="text/javascript" src="src/js/circularplot.js"></script>
@@ -175,7 +180,8 @@
     .attr("d", d3.svg.arc().outerRadius(ry - 120).innerRadius(0).startAngle(0).endAngle(2 * Math.PI))
     //.on("mousedown", mousedown);
 
-    var nodes = cluster.nodes(packages.root(ribbons)),
+d3.json("data/pseudo/tra.json",function(classes){
+    var nodes = cluster.nodes(packages.root(classes)),
       links = packages.imports(nodes),
       splines = bundle(links);
     //  console.log(splines);
@@ -199,7 +205,7 @@
       .attr("dy", ".31em")
       .attr("text-anchor", function(d) { return d.x < 180 ? "start" : "end"; })
       .attr("transform", function(d) { return d.x < 180 ? null : "rotate(180)"; })
-      .text(function(d) { return "|"; })
+      .text(function(d) { return "====="; })
       .on("mouseover", mouseover)
       .on("mouseout", mouseout);
 
@@ -207,6 +213,7 @@
     line.tension(this.value / 100);
     path.attr("d", function(d, i) { return line(splines[i]); });
     });
+  });
 
     d3.select(window)
     .on("mousemove", mousemove)
@@ -286,47 +293,7 @@
     }
 
     </script>
-    <!-- <script>
-      var splines = [];
-
-      var bundle = d3.layout.bundle();
-
-      var line = d3.svg.line.radial()
-          .interpolate("bundle")
-          .tension(.85)
-          .radius(function(d) {console.log(d); return d.y; })
-          .angle(function(d) { return d.x / 180 * Math.PI; });
-
-      var links = packages.imports(tracks[0].items);
-        splines = bundle(links);
-      //console.log(splines);
-
-      var w = 1280,
-          h = 800,
-          rx = w / 2,
-          ry = h / 2,
-          m0,
-          rotate = 0;
-
-      var svg = d3.select("#circularchart")
-
-      svg.append("svg:path")
-          .attr("class", "arc")
-          .attr("d", d3.svg.arc().outerRadius(ry - 120).innerRadius(0).startAngle(0).endAngle(2 * Math.PI));
-
-      var path = svg.selectAll("path.link")
-          .data(links)
-          .enter().append("svg:path")
-          .attr("class", function(d) { return "link source-" + d.source.key + " target-" + d.target.key; })
-          .attr("d", function(d,i) {
-            if(splines[i] != null) {
-            console.log(i);
-            console.log(d);
-            return line(splines[i]);
-          }});
-
-
-    </script> -->
+    
     <!-- Controls on the demo -->
     <div id="demo-controls">
       <div class="control-item"><button name="saveImage" onclick="saveImage(); return false">Save Image</button></div>
