--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="d3/d3.js"></script>
     <script src="d3/d3-tip.js"></script>
     <script src="src/js/jquery-3.0.0.js"></script>
+
     <style>
     body {
      margin: 0;
@@ -13,6 +14,18 @@
      font-family: "Helvetica Neue", Helvetica;
 
    }
+
+   /* This only works with JavaScript,
+  if it's not present, don't show loader */
+  .se-pre-con {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(src/img/Preloader_9.gif) center no-repeat #fff;
+  }
 
    #linearchart {
      position: absolute;
@@ -22,14 +35,21 @@
 
    #brush {
      position: absolute;
-     top: 1200px;
-     left: 250px;
+     top: 800px;
+     left: 1000px;
    }
 
    #circularchart {
      position: absolute;
      top: 0px;
      left: 125px;
+   }
+   #jbrowse{
+     position: absolute;
+     top: 1200px;
+     left: 20px;
+     width:90%;
+     min-height: 500px;
    }
       path.arc {
         cursor: move;
@@ -49,6 +69,17 @@
         stroke: #1f77b4;
         stroke-opacity: .4;
         pointer-events: none;
+      }
+
+      .link.tra{
+       /* stroke: orange;*/
+        stroke-dasharray: 10,3;
+      }
+
+      .link.dup_tra{
+       /* stroke: orange;*/
+        stroke-dasharray: 40,3,10,3;
+        stroke-opacity: .6;
       }
 
       .link.source, .link.target {
@@ -71,14 +102,30 @@
       .link.target {
         stroke: #2ca02c;
       }
-      @media screen and (max-width: 1900px) {
+      @media screen and (max-width: 1800px) {
           #TRAhover {
               display: none !important;
           }
+          #legend {
+              display: none !important;
+          }
+          #brush {
+            top: 850px;
+            left: 100px;
+            }
+      }
+      #legend {
+        float:right;
+        top:30px;
+        right:100px;
+        left:auto;
+        margin-right: 20%;
+        margin-top: 2%;
       }
 
      #TRAhover {
       /*background-color: #99ff99;*/
+      position: absolute;
       min-width: 100px;
       min-height: 300px;
       margin-right: 20%;
@@ -90,6 +137,9 @@
       top: 10px;
       width: 30%;
       font-size: 150%;
+     }
+     #genomeSelect {
+        float:right;
      }
      .trred {
         background-color: #ff9999;
@@ -104,38 +154,37 @@
     <!-- <script src="src/js/readinput.js"></script> -->
     <!-- <script src="src/js/readJBrowse.js"></script> -->
     <script>
-    // var tracks = [];
-    // readJBrowse();
-    // start of pseudo data
-    //var tracks =[];
-    // //
-    // var track1 = {
-    // trackName: "track2",
-    // visible: true,
-    // trackType: "stranded",
-    // inner_radius: 315,
-    // outer_radius: 365,
-    // centre_line_stroke: "grey",
-    // showLabels: true,
-    // showTooltip: true
-    // };
+    var pathSrc = "http://oryzasnp.org/jbrowse-dev2/?loc=chr",
+    chrSrc = "01",
+    trackRenderSrc = "msu7indelsv2",
+    tail1Src = "&tracks=DNA%2C",
+    tail2Src = "&highlight=",
+    updateFrame = true;
 
-    // var request = new XMLHttpRequest();
-    // request.open("GET", "data/pseudo/sampdata.json",false);
-    // request.send(null)
-    // var track = JSON.parse(request.responseText);
-    // track1.items = track;
-    // console.log(track1);
-    // tracks.push(track1);
+
     </script>
   </head>
   <body>
+    <div class="se-pre-con"></div>
     <div id="body">
       <!-- The containers that will hold the SVG of the plots -->
       <div id="circularchart"></div>
-      <div id="linearchart"></div>
       <div id="brush"></div>
+      <div id="linearchart"></div>
+      <div id="legend">
+          <img src="src/img/legend.svg"/>
+      </div>
       <div id="TRAhover">
+      <div id="genomeSelect">
+      Genome Track:
+      <select id="trackName"></select>
+      <button onclick="render()"> Render </button>
+      </br>
+      Resolution:
+      </br>
+      <input type="radio" id="res1" name="gender" value="250000" checked> 250000<br>
+      <input type="radio" id="res2" name="gender" value="100000"> 100000
+      </div>
         <div id="info" > </div>
           <div id="logo" style="float:right;position:relative;" >
             <!-- <img src="src/img/icon.png" style="width: 200px; height 200px;top:0"> -->
@@ -144,6 +193,7 @@
              <table style="width:100%">
               <thead>
                 <tr>
+                  <th>Type: </th>
                   <th>Chr from:</th>
                   <th>Start:</th>
                   <th>End:</th>
@@ -157,12 +207,10 @@
 
         </div>
       </div>
-    </div>
-    <!-- Libraries needed for save feature -->
-    <!-- <script type="text/javascript" src="http://bl.ocks.org/lairdm/raw/bdd7410698e06970a9ff/rgbcolor.js"></script>
-    <script type="text/javascript" src="http://bl.ocks.org/lairdm/raw/bdd7410698e06970a9ff/canvg.js"></script>
-    <script type="text/javascript" src="http://bl.ocks.org/lairdm/raw/bdd7410698e06970a9ff/FileSaver.js"></script> -->
 
+    </div>
+
+    <script src="src/js/config.js"></script>
     <!-- Circular plot library -->
     <script type="text/javascript" src="src/js/circularplot.js"></script>
     <!-- Linear plot library -->
@@ -186,14 +234,15 @@
     </script>
 
     <!-- Controls on the demo -->
-    <div id="demo-controls">
-      <div class="control-item"><button name="saveImage" onclick="saveImage(); return false">Save Image</button></div>
 
-    </div>
 
+   <iframe id="jbrowse"></iframe>
   <script type="text/javascript">
       // Hack to make this example display correctly in an iframe on bl.ocks.org
       d3.select(self.frameElement).style("height", "650px");
+
   </script>
+
+
  </body>
 </html>
