--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+
     <title>GenomeD3Plot Circularplot Example</title>
     <script src="d3/d3.js"></script>
     <script src="d3/d3-tip.js"></script>
@@ -64,7 +65,7 @@
         </div>
       </div>
       <div id="addLayer">
-        <input type="checkbox"  value="qtarogenes_bacterial_blight_resistance" > Bacterial blight resistance</br>
+        <input class="trait" type="checkbox"  value="qtarogenes_bacterial_blight_resistance" > Bacterial blight resistance</br>
         <input type="checkbox" value="qtarogenes_blast_resistance">   Blast resistance </br>
         <input type="checkbox" value="qtarogenes_cold_tolerance">   Cold tolerance </br>
         <input type="checkbox" value="qtarogenes_culm_leaf">   Culm leaf </br>
