fix view on chrome

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </div>
       </div>
       <div id="addLayer">
+        <div style="overflow-y:scroll; max-height: 700px;">
         <input class="trait" type="checkbox"  value="qtarogenes_bacterial_blight_resistance" > Bacterial blight resistance</br>
         <input type="checkbox" value="qtarogenes_blast_resistance">   Blast resistance </br>
         <input type="checkbox" value="qtarogenes_cold_tolerance">   Cold tolerance </br>
@@ -92,6 +93,7 @@
         <input type="checkbox" value="qtarogenes_source_activity">   Source activity </br>
         <input type="checkbox" value="qtarogenes_sterility">   Sterility </br>
         <!-- <input type="checkbox" value="qtarogenes_sterility">   Submergency tolerance </br> -->
+        </div>
         <button onclick="addLayer()">Add Trait(s)</button>
       </div>
     </div>
