fix view on chrome v2

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-
-    <title>GenomeD3Plot Circularplot Example</title>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css"> -->
+    <title>Rice Circoteract</title>
     <script src="d3/d3.js"></script>
     <script src="d3/d3-tip.js"></script>
     <script src="src/js/jquery-3.0.0.js"></script>
@@ -66,32 +66,32 @@
       </div>
       <div id="addLayer">
         <div style="overflow-y:scroll; max-height: 700px;">
-        <input class="trait" type="checkbox"  value="qtarogenes_bacterial_blight_resistance" > Bacterial blight resistance</br>
-        <input type="checkbox" value="qtarogenes_blast_resistance">   Blast resistance </br>
-        <input type="checkbox" value="qtarogenes_cold_tolerance">   Cold tolerance </br>
-        <input type="checkbox" value="qtarogenes_culm_leaf">   Culm leaf </br>
-        <input type="checkbox" value="qtarogenes_drought_tolerance">   Drought tolerance </br>
-        <input type="checkbox" value="qtarogenes_dwarf">   Dwarf </br>
-        <input type="checkbox" value="qtarogenes_eating_quality">   Eating quality </br>
-        <input type="checkbox" value="qtarogenes_flowering">   Flowering </br>
-        <input type="checkbox" value="qtarogenes_germination_dormancy">   Germination dormancy </br>
-        <input type="checkbox" value="qtarogenes_insect_resistance">   Insect resistance </br>
-        <input type="checkbox" value="qtarogenes_lethality">   Lethality </br>
-        <input type="checkbox" value="qtarogenes_lodging_resistance">   Lodging resistance </br>
-        <input type="checkbox" value="qtarogenes_morphological_trait">   Morphological trait </br>
-        <input type="checkbox" value="qtarogenes_other_soil_stress_tolerance">   Other soil stress tolerance </br>
-        <input type="checkbox" value="qtarogenes_other_stress_resistance">   Other stress resistance </br>
-        <input type="checkbox" value="qtarogenes_others">   Others </br>
-        <input type="checkbox" value="qtarogenes_panicle_flower">   Panicle flower </br>
-        <input type="checkbox" value="qtarogenes_physiological_trait">   Physiological trait </br>
-        <input type="checkbox" value="qtarogenes_resistance_or_tolerance">   Resistance or Tolerance </br>
-        <input type="checkbox" value="qtarogenes_root">   Root </br>
-        <input type="checkbox" value="qtarogenes_salinity_tolerance">   Salinity tolerance </br>
-        <input type="checkbox" value="qtarogenes_seed">   Seed </br>
+        <p><input type="checkbox" value="qtarogenes_bacterial_blight_resistance" > Bacterial blight resistance</p>
+        <p><input type="checkbox" value="qtarogenes_blast_resistance">   Blast resistance </p>
+        <p><input type="checkbox" value="qtarogenes_cold_tolerance">   Cold tolerance </p>
+        <p><input type="checkbox" value="qtarogenes_culm_leaf">   Culm leaf </p>
+        <p><input type="checkbox" value="qtarogenes_drought_tolerance">   Drought tolerance </p>
+        <p><input type="checkbox" value="qtarogenes_dwarf">   Dwarf </p>
+        <p><input type="checkbox" value="qtarogenes_eating_quality">   Eating quality </p>
+        <p><input type="checkbox" value="qtarogenes_flowering">   Flowering </p>
+        <p><input type="checkbox" value="qtarogenes_germination_dormancy">   Germination dormancy </p>
+        <p><input type="checkbox" value="qtarogenes_insect_resistance">   Insect resistance </p>
+        <p><input type="checkbox" value="qtarogenes_lethality">   Lethality </p>
+        <p><input type="checkbox" value="qtarogenes_lodging_resistance">   Lodging resistance </p>
+        <p><input type="checkbox" value="qtarogenes_morphological_trait">   Morphological trait </p>
+        <p><input type="checkbox" value="qtarogenes_other_soil_stress_tolerance">   Other soil stress tolerance </p>
+        <p><input type="checkbox" value="qtarogenes_other_stress_resistance">   Other stress resistance </p>
+        <p><input type="checkbox" value="qtarogenes_others">   Others </p>
+        <p><input type="checkbox" value="qtarogenes_panicle_flower">   Panicle flower </p>
+        <p><input type="checkbox" value="qtarogenes_physiological_trait">   Physiological trait </p>
+        <p><input type="checkbox" value="qtarogenes_resistance_or_tolerance">   Resistance or Tolerance </p>
+        <p><input type="checkbox" value="qtarogenes_root">   Root </p>
+        <p><input type="checkbox" value="qtarogenes_salinity_tolerance">   Salinity tolerance </p>
+        <p><input type="checkbox" value="qtarogenes_seed">   Seed </p>
         <!-- <input type="checkbox" value="100000">   Sheath blight resistance </br> -->
-        <input type="checkbox" value="qtarogenes_shoot_seedling">   Shoot Seedling </br>
-        <input type="checkbox" value="qtarogenes_source_activity">   Source activity </br>
-        <input type="checkbox" value="qtarogenes_sterility">   Sterility </br>
+        <p><input type="checkbox" value="qtarogenes_shoot_seedling">   Shoot Seedling </p>
+        <p><input type="checkbox" value="qtarogenes_source_activity">   Source activity </p>
+        <p><input type="checkbox" value="qtarogenes_sterility">   Sterility </p>
         <!-- <input type="checkbox" value="qtarogenes_sterility">   Submergency tolerance </br> -->
         </div>
         <button onclick="addLayer()">Add Trait(s)</button>
